<resources>
    <string name="app_name">QQLogin</string>
    <string name="login_note">登录即代表阅读并同意</string>
    <string name="service_agreement">服务协议</string>
    <string name="user_register">用户注册</string>
    <string name="ignore_password">忘记密码</string>
    <string name="back_password">找回密码</string>
    <string name="login_by_sms">短信验证登录</string>
    <string name="text_agreement">QQ软件许可及服务协议\n
【首部及导言】\n
\u3000\u3000欢迎您使用腾讯QQ软件及服务！\n
\u3000\u3000为使用腾讯QQ软件（以下统称“本软件”）及服务（以下统称“本服务”），您应当阅读并遵守《QQ软件许可及服务协议》（以下简称“本协议”），以及《腾讯服务协议》、《QQ号码规则》、《腾讯隐私政策》。请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制腾讯责任的条款、对用户权利进行限制的条款、约定争议解决方式和司法管辖的条款（如第十五条相关约定）等，以及开通或使用某项服务的单独协议。限制、免责条款或者其他涉及您重大权益的条款可能以加粗、加下划线等形式提示您重点注意。\n
\u3000\u3000除非您已充分阅读、完全理解并接受本协议所有条款，否则您无权下载、安装或使用本软件和/或相关服务。您点击“同意”、“下一步”或您的下载、安装、使用、登录等行为或者您以其他任何明示或者默示方式表示接受本协议的，即视为您已阅读并同意本协议的约束。本协议即在您与腾讯之间产生法律效力，成为对双方均具有约束力的法律文件。\n
\u3000\u3000如果您因年龄、智力等因素而不具有完全民事行为能力，请在法定监护人（以下简称"监护人"）的陪同下阅读和判断是否同意本协议。\n
\u3000\u3000如果您是非中国大陆地区的用户，您订立或履行本协议以及使用本服务的行为还需要同时遵守您所属和/或所处国家或地区的法律。
</string>
    <string name="text_yinsi">隐私协议内容</string>
</resources>
