<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="48dp"
    android:layout_marginEnd="48dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_qq"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       android:src="@drawable/qq_logo"
        android:contentDescription="TODO" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_tv"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/img_qq"
        tools:layout_editor_absoluteX="42dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/img_avatar"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/ed_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_tv"
            android:gravity="center"
            android:ems="10"

            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_tv"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_tv"
            android:gravity="center"
            android:ems="10"
            android:inputType="numberPassword"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_login"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:src="@android:drawable/ic_menu_send"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ignore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ignore_password"
                android:textColor="#000000" />

            <View
                android:id="@+id/divider"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/color_tv_bg" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/user_register"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_note" />
            <TextView
                android:id="@+id/tv_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/service_agreement" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>